--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <p>All the Best for your exam
-    
+
 </p>
+<ol><h>List of Things</h>
+<list>ATTA</list>
+<list>OIL</list>
+<list>BISCUITS</list>
+
+
+</ol>
