--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>All the Best for your exam
 
 </p>
-<ol><h>List of Things</h>
+<ol><h>List of Things (botton)</h>
 <list>ATTA</list>
 <list>OIL</list>
 <list>BISCUITS</list>
